2003-04-11  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/lore:
	Added a "lore-slides" plugin, with HTML, Magicpoint and Prosper output
	targets.  It's still a bit rough, but functional.

2003-04-10  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4alpha2.

2003-04-09  Brian Warner  <warner@lothar.com>

	* twisted/scripts/trial.py (Options.opt_reactor): install reactor
	before parseArgs() does an import and installs the default one

	* twisted/internet/process.py: fix typo,
	s/registerReapProccessHandler/registerReapProcessHandler)/

2003-04-09  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/internet/base.py: Change the sort order of DelayedCalls
	and remove them from the end of the list instead of the beginning.
	This changes O(n) complexity to O(1) complexity.

2003-04-09  Brian Warner  <warner@lothar.com>

	* twisted/test/test_jelly.py, test_newjelly: Test cleanup.
	Parameterize the jelly module used by the tests, make test_jelly a
	subclass of test_newjelly using a different jelly module: tests
	should now be unified. Also change tests to use proper trial
	self.failUnless() methods instead of bare assert().

2003-04-09  Bob Ippolito  <bob@redivi.com>

	* twisted/python/util.py (OrderedDict): added a UserDict subclass
	that preserves insert order (for __repr__, items, values, keys).

	* twisted/internet/app.py (Application, _AbstractServiceCollection):
	Preserve service order, start services in order, stop them in reverse.

2003-04-09  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/protocols/ftp.py (FTPClient):
	Added STOR support to FTPClient, as well as support for using
	Producers or Consumers instead of Protocols for uploading/downloading.
	* twisted/protocols/policies.py (TimeoutWrapper):
	Added a timeout policy that can be used to automatically disconnect
	inactive connections.

2003-04-07  Brian Warner  <warner@lothar.com>

	* twisted/test/test_banana.py (BananaTestCase): add Acapnotic's