@@ -1,3 +1,12 @@
+2003-04-11  Brian Warner  <warner@lothar.com>
+
+	* twisted/internet/gtk2reactor.py: major fixes. Use different
+	POLLIN/OUT flags to robustly work around pygtk bug, change
+	callback() to behave more like pollreactor (since gtk uses poll
+	internally). doIteration now calls gtk.main_iteration in a
+	non-blocking way. Attempt to emulate doIteration(delay!=0) by
+	using time.sleep().
+ 
 2003-04-11  Andrew Bennetts  <spiv@twistedmatrix.com>
 
 	* twisted/lore:
